Detail Fragment modified changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="content_authority">example.com.udacitymovie</string>
+
 </resources>
